--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,13 +4,49 @@
   переключая тему
 */
 
-:root.theme-dark {
+.page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --cover-image: url(../images/cover-image-dark.png);
+  --accent-color: #ff0070;
+  --rec-color: #ff0070;
+  --border-color: rgb(255 0 112 / 0.4);
+  --title-color: #db00ff;
+  --section-title-color: #ff0070;
+  --decoration-color: #ff0070;
+  --active-button-color: #ff0070;
+  --button-text-color: #ff0070;
+  --text-color: #f1b2ce;
+  --accent-text-color: #000028;
+  --bg-color: #000028;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+@media (prefers-color-scheme: dark) {
+  .page {
+    --cover-image: url(../images/cover-image-dark.png);
+    --accent-color: #ff0070;
+    --rec-color: #ff0070;
+    --border-color: rgb(255 0 112 / 0.4);
+    --title-color: #db00ff;
+    --section-title-color: #ff0070;
+    --decoration-color: #ff0070;
+    --active-button-color: #ff0070;
+    --button-text-color: #ff0070;
+    --text-color: #f1b2ce;
+    --accent-text-color: #000028;
+    --bg-color: #000028;
+  }
+
+  .header__decoration {
+    visibility: hidden;
+  }
+
+  .header::before
+  .header::after
+  .footer::before
+  .footer::after {
+    border-color: var(--text-color);
+  }
 }
