--- a/styles/light.css
+++ b/styles/light.css
@@ -4,13 +4,59 @@
   переключая тему
 */
 
-:root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+
+.page.theme_light {
+  --cover-image: url(../images/cover-image-light.png);
+  --accent-color: #ff8dcb;
+  --rec-color: transparent;
+  --border-color: rgb(50 49 45 / 0.4);
+  --title-color: #ffc2e6;
+  --section-title-color: #353430;
+  --decoration-color: #353430;
+  --active-button-color: #353430;
+  --button-text-color: #353430;
+  --text-color: #353430;
+  --accent-text-color: #353430;
+  --bg-color: #FFF1F7;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.page.theme_light.rec {
+  display: none;
+}
+
+.theme_light .header__decoration {
+  visibility: hidden;
+}
+
+.theme_light .header::before
+.theme_light .header::after
+.theme_light .footer::before
+.theme_light .footer::after {
+  border-color: var(--text-color);
+}
+
+@media (prefers-color-scheme: light) {
+  .page {
+    --cover-image: url(../images/cover-image-light.png);
+    --accent-color: #ff8dcb;
+    --border-color: rgb(50 49 45 / 0.4);
+    --title-color: #ffc2e6;
+    --section-title-color: #353430;
+    --decoration-color: #353430;
+    --active-button-color: #353430;
+    --text-color: #353430;
+    --accent-text-color: #353430;
+    --bg-color: #FFF1F7;
+  }
+
+  .header__decoration {
+    visibility: hidden;
+  }
+
+  .header::before
+  .header::after
+  .footer::before
+  .footer::after {
+    border-color: var(--text-color);
+  }
 }
