--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,546 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-image: var(--cover-image);
+  background-position: right;
+  background-color: var(--bg-color);
+  background-attachment: fixed;
+  background-size: cover;
+
+}
+
+.shadow_link {
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+.shadow_link:focus {
+  text-decoration: none;
+  outline: none;
+}
+
+.shadow_link:hover {
+  text-decoration: none;
+  border-bottom: 1px solid var(--text-color);
+}
+
+.shadow_link:focus-visible {
+  border: 1px solid var(--text-color);
+}
+
+.header {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  position: relative;
+  block-size: 100vh;
+  min-block-size: 668px;
+}
+
+.rec::before {
+  content: "rec";
+  text-transform: uppercase;
+  color: var(--rec-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  text-align: center;
+  width: 33px;
+  height: 26px;
+  top: 20px;
+  right: 48px;
+  position: absolute;
+}
+
+.rec::after {
+  content: "";
+  box-shadow: 0px 0px 4px 2px var(--rec-color);
+  background-color: var(--rec-color);
+  width: 9px;
+  height: 9px;
+  top: 28px;
+  right: 30px;
+  position: absolute;
+  border-radius: 6px;
+}
+
+.decorated-zone::before {
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--decoration-color);
+  border-right: 1px solid var(--decoration-color);
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+.decorated-zone::after {
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-left: 1px solid var(--decoration-color);
+  border-bottom: 1px solid var(--decoration-color);
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+
+.header__theme-menu {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  margin-bottom: 210px;
+}
+
+.header__theme-menu-button {
+  color: var(--button-text-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: center;
+  background-color: transparent;
+  border: none;
+  text-transform: lowercase;
+  margin-left: 6px;
+  margin-right: 6px;
+  cursor: pointer;
+  width: 70px;
+  height: 26px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--active-button-color);
+  pointer-events: none;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--border-color);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--button-text-color);
+}
+
+.decoration {
+  color: var(--title-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  font-weight: 700;
+  line-height: 129.53px;
+  text-align: left;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  text-shadow: 4px 4px 0px var(--accent-color);
+}
+
+.header_title {
+  background-color: var(--accent-color);
+  color: var(--accent-text-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  text-align: left;
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  margin-right: 20px;
+  margin-bottom: 82px;
+}
+
+.content {
+  margin-top: 61px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.why {
+  display: grid;
+  align-items: start;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 20px;
+  margin-bottom: 80px;
+}
+
+.article {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.paragraph_block {
+  display: grid;
+  grid-column-start: 2;
+  grid-column-end: 4;
+  row-gap: 18px;
+}
+
+.what {
+  margin-bottom: 80px;
+}
+
+.text_block {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.section_body {
+  display: grid;
+  align-items: start;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 20px;
+  margin-top: 20px;
+}
+
+.section_title {
+  color: var(--section-title-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  text-align: left;
+}
+
+.section_title:not(:first-of-type) {
+  margin-bottom: 20px;
+}
+
+.how {
+  display: grid;
+  align-items: start;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 20px;
+  margin-bottom: 80px;
+}
+
+.paragraph_set {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.text_section {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.content_title {
+  background-color: var(--accent-color);
+  color: var(--accent-text-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  text-align: left;
+}
+
+.paragraph_title {
+  background-color: var(--accent-color);
+  color: var(--accent-text-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  text-align: left;
+  grid-column-start: 2;
+  grid-column-end: 4;
+}
+
+.paragraph_scope {
+  background-color: var(--accent-color);
+  color: var(--accent-text-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  text-align: left;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  margin-bottom: 2px;
+}
+
+.text_section_set {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.text_title {
+  background-color: var(--accent-color);
+  color: var(--accent-text-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23.4px;
+  text-align: left;
+}
+
+.text {
+  color: var(--text-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  line-height: 23.4px;
+  text-align: left;
+  font-weight: 400;
+  grid-column-start: 2;
+  grid-column-end: 4;
+}
+
+.pictures {
+  margin-bottom: 60px;
+  margin-top: 25px;
+}
+
+.panno {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.gorizontal_pic {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.vertical_s_pic {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.vertical_m_pic {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.center_pic {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.bottom_pic {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  block-size: 100vh;
+  min-block-size: 668px;
+  position: relative;
+}
+
+@media (min-width: 668px) and (max-width: 768px) {
+  .decoration {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    line-height: 99px;
+    text-wrap: nowrap;
+  }
+
+  .header_title {
+    margin-bottom: 146px;
+  }
+
+  .header__theme-menu {
+    grid-column-start: 4;
+    margin-top: 162px;
+    margin-right: 15px;
+    margin-bottom: 55px;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 15px;
+  }
+
+  .section_title {
+    width: 236px;
+    height: 70px;
+  }
+
+  .section_body {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 668px) {
+  .decoration {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: 95.7px;
+    margin-left: 10px;
+  }
+
+  .header__theme-menu {
+    grid-column-start: 4;
+    margin-top: 0px;
+    margin-right: 5px;
+    margin-bottom: 0px;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 15px;
+  }
+
+  .header_title {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 23px;
+  }
+
+  .decorated-zone::before {
+    top: 10px;
+    right: 10px;
+  }
+
+  .decorated-zone::after {
+    left: 10px;
+    bottom: 10px;
+  }
+
+  .rec::before {
+    top: 10px;
+    right: 40px;
+  }
+
+  .rec::after {
+    top: 18px;
+    right: 20px;
+  }
+
+  .content {
+    display: grid;
+    grid-template-columns: repeat(1, 355px);
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 42px;
+  }
+
+  .article {
+    gap: 0px;
+  }
+
+  .why {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    margin-bottom: 0px;
+  }
+
+  .section_title {
+    margin-bottom: 20px;
+  }
+
+  .section_body {
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 20px;
+  }
+
+  .paragraph_title {
+    margin-bottom: 10px;
+  }
+
+  .paragraph_block {
+    display: block;
+  }
+
+  .text_section:first-of-type {
+    margin-bottom: -6px;
+  }
+
+  .text_section_set {
+    gap: 7px;
+  }
+
+  .paragraph_scope {
+    margin-bottom: 20px;
+  }
+
+  .text {
+    margin-bottom: 15px;
+  }
+
+  .what {
+    margin-top: 40px;
+    margin-bottom: 38px;
+  }
+
+  .text_block {
+    gap: 2px;
+  }
+
+  .text_title {
+    margin-bottom: 10px;
+  }
+
+  .how {
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    margin-bottom: 7px;
+  }
+
+  .panno {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 5px;
+  }
+
+  .footer {
+    margin-top: -20px;
+  }
 }
