--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,18 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+.page {
+  --cover-image: url(../images/cover-image-dark.png);
+  --accent-color: #ff0070;
+  --rec-color: #ff0070;
+  --border-color: rgb(255 0 112 / 0.4);
+  --active-button-color: #ff0070;
+  --button-text-color: #ff0070;
+  --decoration-color: #ff0070;
+  --title-color: #db00ff;
+  --section-title-color: #ff0070;
+  --text-color: #f1b2ce;
+  --accent-text-color: #000028;
+  --bg-color: #000028;
+}
