--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,53 +1,39 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-  --cover-image: url(../images/cover-image-dark.png);
-  --accent-color: #ff0070;
-  --rec-color: #ff0070;
-  --border-color: rgb(255 0 112 / 0.4);
-  --title-color: #db00ff;
-  --section-title-color: #ff0070;
-  --decoration-color: #ff0070;
-  --active-button-color: #ff0070;
-  --button-text-color: #ff0070;
-  --text-color: #f1b2ce;
-  --accent-text-color: #000028;
   --bg-color: #000028;
+  --bg-image: url(../images/cover-image-dark.png);
+  --color-title: #db00ff;
+  --accent-color: #ff0070;
+  --bg-color-text: #ff0070;
+  --color-subtitle-h2: #ff0070;
+  --color-subtitle-h3: #000028;
+  --color-text: #f1b2ce;
+  --font-family: "IBM Plex Mono";
+  --font-size-theme-menu-item: 18px;
+  --color-button-hover: rgb(255 0 112 / 0.4);
+  --title-decor: #ff0070;
+}
+
+.page.theme_dark .rec {
+  display: block;
 }
 
 @media (prefers-color-scheme: dark) {
-  .page {
-    --cover-image: url(../images/cover-image-dark.png);
-    --accent-color: #ff0070;
-    --rec-color: #ff0070;
-    --border-color: rgb(255 0 112 / 0.4);
-    --title-color: #db00ff;
-    --section-title-color: #ff0070;
-    --decoration-color: #ff0070;
-    --active-button-color: #ff0070;
-    --button-text-color: #ff0070;
-    --text-color: #f1b2ce;
-    --accent-text-color: #000028;
+  :root {
     --bg-color: #000028;
+    --bg-image: url(../images/cover-image-dark.png);
+    --color-title: #db00ff;
+    --accent-color: #ff0070;
+    --bg-color-text: #ff0070;
+    --color-subtitle-h2: #ff0070;
+    --color-subtitle-h3: #000028;
+    --color-text: #f1b2ce;
+    --font-family: "IBM Plex Mono";
+    --font-size-theme-menu-item: 18px;
+    --color-button-hover: rgb(255 0 112 / 0.4);
+    --title-decor: #ff0070;
   }
 
-  .header__decoration {
-    visibility: hidden;
-  }
-
-  .header::before
-  .header::after
-  .footer::before
-  .footer::after {
-    border-color: var(--text-color);
+  .rec {
+    display: block;
   }
 }
-
