--- a/styles/light.css
+++ b/styles/light.css
@@ -1,62 +1,39 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
-
 .page.theme_light {
-  --cover-image: url(../images/cover-image-light.png);
-  --accent-color: #ff8dcb;
-  --rec-color: transparent;
-  --border-color: rgb(50 49 45 / 0.4);
-  --title-color: #ffc2e6;
-  --section-title-color: #353430;
-  --decoration-color: #353430;
-  --active-button-color: #353430;
-  --button-text-color: #353430;
-  --text-color: #353430;
-  --accent-text-color: #353430;
-  --bg-color: #FFF1F7;
+  --bg-color: #fff1f7;
+  --bg-image: url(../images/cover-image-light.png);
+  --color-title: #ffc2e6;
+  --accent-color: #353430;
+  --bg-color-text: #ff0070;
+  --color-subtitle-h2: #353430;
+  --color-subtitle-h3: #353430;
+  --color-text: #353430;
+  --font-family: "IBM Plex Mono";
+  --font-size-theme-menu-item: 18px;
+  --title-decor: #ff8dcb;
+  --color-button-hover: rgb(50 49 45 / 0.4);
 }
 
-.page.theme_light.rec {
+.page.theme_light .rec {
   display: none;
 }
 
-.theme_light .header__decoration {
-  visibility: hidden;
-}
-
-.theme_light .header::before
-.theme_light .header::after
-.theme_light .footer::before
-.theme_light .footer::after {
-  border-color: var(--text-color);
-}
-
 @media (prefers-color-scheme: light) {
-  .page {
-    --cover-image: url(../images/cover-image-light.png);
-    --accent-color: #ff8dcb;
-    --border-color: rgb(50 49 45 / 0.4);
-    --title-color: #ffc2e6;
-    --section-title-color: #353430;
-    --decoration-color: #353430;
-    --active-button-color: #353430;
-    --text-color: #353430;
-    --accent-text-color: #353430;
-    --bg-color: #FFF1F7;
+  :root {
+    --bg-color: #fff1f7;
+    --bg-image: url(../images/cover-image-light.png);
+    --color-title: #ffc2e6;
+    --accent-color: #353430;
+    --bg-color-text: #ff0070;
+    --color-subtitle-h2: #353430;
+    --color-subtitle-h3: #353430;
+    --color-text: #353430;
+    --font-family: "IBM Plex Mono";
+    --font-size-theme-menu-item: 18px;
+    --title-decor: #ff8dcb;
+    --color-button-hover: rgb(50 49 45 / 0.4);
   }
 
-  .header__decoration {
-    visibility: hidden;
-  }
-
-  .header::before
-  .header::after
-  .footer::before
-  .footer::after {
-    border-color: var(--text-color);
+  .rec {
+    display: none;
   }
 }
