--- a/styles/style.css
+++ b/styles/style.css
@@ -1,545 +1,449 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  background-image: var(--cover-image);
-  background-color: var(--bg-color);
-  background-attachment: fixed;
+  min-width: 375px;
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
-  background-position: right;
+  background-attachment: fixed;
+  background-color: var(--bg-color);
+  font-family: var(--font-family, sans-serif);
+  font-weight: var(--font-weight-content-list);
+  line-height: var(--line-height);
+  text-align: var(--text-align);
 }
 
-.shadow_link {
-  text-shadow: 2px 2px 0px var(--accent-color);
-}
-
-.shadow_link:focus {
-  text-decoration: none;
-  outline: none;
-}
-
-.shadow_link:hover {
-  text-decoration: none;
-  border-bottom: 1px solid var(--text-color);
-}
-
-.shadow_link:focus-visible {
-  border: 1px solid var(--text-color);
+.title-decor {
+  background-color: var(--title-decor);
 }
 
 .header {
+  position: relative;
   display: grid;
-  align-items: center;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  position: relative;
+  max-block-size: 668px;
   block-size: 100vh;
-  min-block-size: 668px;
+  inline-size: 100%;
 }
 
-.rec::before {
-  content: "rec";
-  text-transform: uppercase;
-  color: var(--rec-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 25px;
-  text-align: center;
+.decorations::before,
+.decorations::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  background-color: transparent;
+}
+
+.decorations::before {
+  top: 10px;
+  right: 10px;
+  border-top: 1px solid var(--accent-color, #ff0070);
+  border-right: 1px solid var(--accent-color, #ff0070);
+}
+
+.decorations::after {
+  bottom: 10px;
+  left: 10px;
+  border-bottom: 1px solid var(--accent-color, #ff0070);
+  border-left: 1px solid var(--accent-color, #ff0070);
+}
+
+.rec {
+  position: absolute;
+  display: inline-block;
   width: 33px;
   height: 26px;
-  top: 20px;
-  right: 48px;
-  position: absolute;
+  top: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
+  right: clamp(2.375rem, 1.7786rem + 2.5445vw, 3rem);
+  font-family: var(--font-family);
+  color: var(--accent-color);
+  font-size: var(--font-size-theme-menu-item);
+  font-weight: var(--font-weight-content-list);
+  line-height: 25px;
+  text-transform: uppercase;
 }
 
 .rec::after {
   content: "";
-  box-shadow: 0px 0px 4px 2px var(--rec-color);
-  background-color: var(--rec-color);
+  position: absolute;
+  top: 8px;
+  left: 43px;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
   width: 9px;
   height: 9px;
-  top: 28px;
-  right: 30px;
-  position: absolute;
-  border-radius: 6px;
 }
 
-.decorated-zone::before {
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--decoration-color);
-  border-right: 1px solid var(--decoration-color);
-  position: absolute;
-  right: 20px;
-  top: 20px;
+.title {
+  grid-column: 1 / 5;
+  grid-row: 2 / 3;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: var(--font-weight-subtitle);
+  line-height: var(--line-height-title);
+  color: var(--color-title);
+  text-shadow: 4px 4px 0 var(--bg-color-text);
+  margin: 65px 10px 55px;
 }
 
-.decorated-zone::after {
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-left: 1px solid var(--decoration-color);
-  border-bottom: 1px solid var(--decoration-color);
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+.title-text {
+  grid-column: 1 / 5;
+  grid-row: 3 / 4;
+  color: var(--color-subtitle-h3);
+  font-size: var(--font-size-theme-menu-item);
+  margin: 0 10px 66px;
+  block-size: min-content;
+  font-weight: var(--font-weight-subtitle);
+}
+
+span {
+  display: block;
 }
 
 .header__theme-menu {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  margin-bottom: 210px;
+  grid-column: 1 / 5;
+  grid-row: 1 / 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
 .header__theme-menu-list {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  gap: 10px;
+  margin: 0;
 }
 
 .header__theme-menu-button {
-  color: var(--button-text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 18px;
-  text-align: center;
-  background-color: transparent;
-  border: none;
+  font-size: var(--font-size-theme-menu-item);
   text-transform: lowercase;
-  margin-left: 6px;
-  margin-right: 6px;
-  cursor: pointer;
-  width: 70px;
-  height: 26px;
+  color: var(--accent-color);
+  background-color: transparent;
+  border: transparent;
+  padding: 0 13px 0;
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--active-button-color);
+  border: 1px solid var(--accent-color);
   pointer-events: none;
 }
 
-.header__theme-menu-button:focus {
-  outline: none;
-}
-
 .header__theme-menu-button:hover {
-  border: 1px solid var(--border-color);
+  outline: 1px solid var(--color-button-hover);
 }
 
 .header__theme-menu-button:focus-visible {
-  border-bottom: 1px solid var(--button-text-color);
+  border-bottom: 1px solid var(--accent-color);
 }
 
-.decoration {
-  color: var(--title-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  font-weight: 700;
-  line-height: 129.53px;
-  text-align: left;
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 2;
-  text-shadow: 4px 4px 0px var(--accent-color);
+.card-title {
+  font-weight: var(--font-weight-subtitle);
+  color: var(--color-subtitle-h2);
+  font-size: var(--font-size-theme-menu-item);
+  margin: 0 10px 0;
 }
 
-.header_title {
-  background-color: var(--accent-color);
-  color: var(--accent-text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 23.4px;
-  text-align: left;
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 3;
-  margin-right: 20px;
-  margin-bottom: 82px;
+.content-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.section-articles {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.subtitle {
+  font-size: var(--font-size-theme-menu-item);
+  font-weight: var(--font-weight-subtitle);
+  color: var(--color-subtitle-h3);
+  margin: 0px 10px 0;
+}
+
+.text-link {
+  text-shadow: 2px 2px 0 var(--bg-color-text);
+}
+
+.text-link:hover {
+  border-bottom: 1px solid var(--color-text);
+}
+
+.text-link:focus-visible {
+  outline: 1px solid var(--accent-color);
+}
+
+.content_text-block {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .content {
-  margin-top: 61px;
-  margin-right: 20px;
-  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  margin-top: 40px;
 }
 
-.why {
-  display: grid;
-  align-items: start;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 20px;
-  margin-bottom: 80px;
+.card-text {
+  font-size: var(--font-size-theme-menu-item);
+  color: var(--color-text);
+  margin: 0px 14px 0 10px;
 }
 
-.article {
+.content-list {
+  font-weight: var(--font-weight-content-list);
+  margin: 0 10px 0;
+}
+
+.section-gallery {
+  gap: 10px;
+  margin: 0 0 40px;
+}
+
+.gallery-list {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-.paragraph_block {
-  display: grid;
-  grid-column-start: 2;
-  grid-column-end: 4;
-  row-gap: 18px;
-}
-
-.what {
-  margin-bottom: 80px;
-}
-
-.text_block {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.section_body {
-  display: grid;
-  align-items: start;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 20px;
-  margin-top: 20px;
-}
-
-.section_title {
-  color: var(--section-title-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 23.4px;
-  text-align: left;
-}
-
-.section_title:not(:first-of-type) {
-  margin-bottom: 20px;
-}
-
-.how {
-  display: grid;
-  align-items: start;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 20px;
-  margin-bottom: 80px;
-}
-
-.paragraph_set {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.text_section {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.content_title {
-  background-color: var(--accent-color);
-  color: var(--accent-text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 23.4px;
-  text-align: left;
-}
-
-.paragraph_title {
-  background-color: var(--accent-color);
-  color: var(--accent-text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 23.4px;
-  text-align: left;
-  grid-column-start: 2;
-  grid-column-end: 4;
-}
-
-.paragraph_scope {
-  background-color: var(--accent-color);
-  color: var(--accent-text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 23.4px;
-  text-align: left;
-  grid-column-start: 1;
-  grid-column-end: 4;
-  margin-bottom: 2px;
-}
-
-.text_section_set {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.text_title {
-  background-color: var(--accent-color);
-  color: var(--accent-text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 23.4px;
-  text-align: left;
-}
-
-.text {
-  color: var(--text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 23.4px;
-  text-align: left;
-  grid-column-start: 2;
-  grid-column-end: 4;
-}
-
-.pictures {
-  margin-bottom: 60px;
-  margin-top: 25px;
-}
-
-.panno {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.gorizontal_pic {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  width: 100%;
-  height: 100%;
+.images {
   object-fit: cover;
-}
-
-.vertical_s_pic {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 3;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.vertical_m_pic {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 4;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.center_pic {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.bottom_pic {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  block-size: 100%;
+  inline-size: calc(100% - 20px);
+  margin: 0 10px;
 }
 
 .footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  block-size: 100vh;
-  min-block-size: 668px;
   position: relative;
+  block-size: 100vh;
+  display: grid;
+  align-content: center;
+  justify-content: center;
 }
 
-@media (min-width: 668px) and (max-width: 768px) {
-  .decoration {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    line-height: 99px;
-    text-wrap: nowrap;
-  }
-
-  .header_title {
-    margin-bottom: 146px;
-  }
-
-  .header__theme-menu {
-    grid-column-start: 4;
-    margin-top: 162px;
-    margin-right: 15px;
-    margin-bottom: 55px;
-  }
-  
-  .header__theme-menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 15px;
-  }
-
-  .section_title {
-    width: 236px;
-    height: 70px;
-  }
-
-  .section_body {
-    grid-template-columns: repeat(1, 1fr);
-    gap: 20px;
-  }
+.footer-title {
+  font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
+  color: var(--color-title);
+  font-weight: var(--font-weight-subtitle);
+  line-height: var(--line-height-title);
+  text-shadow: 2px 2px 0 var(--bg-color-text);
+  align-self: center;
 }
 
-@media (min-width: 375px) and (max-width: 668px) {
-  .decoration {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    line-height: 95.7px;
-    margin-left: 10px;
+@media (width >=768px) {
+  .header {
+    max-block-size: 1024px;
   }
 
-  .header__theme-menu {
-    grid-column-start: 4;
-    margin-top: 0px;
-    margin-right: 5px;
-    margin-bottom: 0px;
-  }
-
-  .header__theme-menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 15px;
-  }
-
-  .header_title {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 3;
-    margin-right: 10px;
-    margin-left: 10px;
-    margin-bottom: 23px;
-  }
-
-  .decorated-zone::before {
-    top: 10px;
-    right: 10px;
-  }
-
-  .decorated-zone::after {
-    left: 10px;
-    bottom: 10px;
-  }
-
-  .rec::before {
-    top: 10px;
-    right: 40px;
-  }
-
-  .rec::after {
-    top: 18px;
+  .decorations::before {
+    top: 20px;
     right: 20px;
   }
 
-  .content {
-    display: grid;
-    grid-template-columns: repeat(1, 355px);
-    margin-right: 10px;
-    margin-left: 10px;
-    margin-top: 42px;
+  .decorations::after {
+    bottom: 20px;
+    left: 20px;
   }
 
-  .article {
-    gap: 0px;
+  .header__theme-menu {
+    align-self: center;
   }
 
-  .why {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    margin-bottom: 0px;
+  .header__theme-menu-list {
+    margin-top: 137px;
+    margin-right: 16px;
   }
 
-  .section_title {
-    margin-bottom: 20px;
+  .header__theme-menu-item {
+    padding-top: 2px;
   }
 
-  .section_body {
-    grid-template-columns: repeat(1, 1fr);
-    grid-column-gap: 20px;
+  .title {
+    margin: 0;
+    align-content: center;
+    line-height: clamp(6.1875rem, 0.4631rem + 11.9258vw, 8.095625rem);
   }
 
-  .paragraph_title {
-    margin-bottom: 10px;
-  }
-
-  .paragraph_block {
-    display: block;
-  }
-
-  .text_section:first-of-type {
-    margin-bottom: -6px;
-  }
-
-  .text_section_set {
-    gap: 7px;
-  }
-
-  .paragraph_scope {
-    margin-bottom: 20px;
-  }
-
-  .text {
-    margin-bottom: 15px;
-  }
-
-  .what {
+  .title-text {
+    grid-column: 3 / 5;
+    align-self: start;
+    margin-right: 20px;
     margin-top: 40px;
-    margin-bottom: 38px;
+    margin-left: 0;
   }
 
-  .text_block {
-    gap: 2px;
+  .content-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
   }
 
-  .text_title {
-    margin-bottom: 10px;
+  .section-articles {
+    grid-column: 1 / 4;
+    grid-row: 2;
   }
 
-  .how {
+  .section-who {
+    column-gap: 40px;
+    margin: 20px 20px 0;
+  }
+
+  .card-title_who {
+    grid-column: 1 / 2;
+    grid-row: 1 / 1;
+    margin: 0;
+  }
+
+  .content_text-block_who {
+    grid-column: 2 / 4;
+    margin-top: 0;
+  }
+
+  .subtitle,
+  .card-text {
+    margin: 0;
+  }
+
+  .section-what {
+    margin: 30px 20px 0;
+  }
+
+  .card-title_what {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin: 0;
+  }
+
+  .content_text-block_what {
+    grid-column: 1 / 4;
+    grid-row: span 2;
+    block-size: min-content;
+  }
+
+  .section-how {
+    grid-template-columns: 32% 2fr;
+    column-gap: 23px;
+    margin: 30px 20px 0;
+  }
+
+  .card-title_how {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    margin: 0;
+  }
+
+  .section-how .subtitle {
+    grid-column: 2 / 4;
+    block-size: min-content;
+  }
+
+  .content_text-block_how {
+    grid-column: 2 / 4;
+    grid-row: span 1;
+    block-size: min-content;
+    margin-top: 0;
+  }
+
+  .section-gallery {
     display: flex;
-    flex-direction: column;
-    gap: 0px;
-    margin-bottom: 7px;
+    gap: 20px;
+    margin: 30px 20px 60px;
   }
 
-  .panno {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 5px;
+  .gallery-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, min-content);
+    gap: 20px;
   }
 
-  .footer {
-    margin-top: -20px;
+  .images {
+    margin: 0;
+    inline-size: 100%;
+  }
+
+  .gallery-list-item:nth-child(1) {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+  }
+
+  .gallery-list-item:nth-child(2) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+
+  .gallery-list-item:nth-child(3) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .gallery-list-item:nth-child(4) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .gallery-list-item:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+
+  .footer-title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: clamp(5.98125rem, 5.7844rem + 0.8397vw, 6.1875rem);
+  }
+}
+
+@media (width >=1024px) and (orientation: landscape) {
+  .header__theme-menu {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+    justify-items: center;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    margin: 18px 0 0;
+  }
+
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .title-text {
+    margin-top: 50px;
+  }
+
+  .section-who {
+    gap: 20px 20px;
+  }
+
+  .section-articles {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column: 1 / 4;
+    grid-row: 2;
+    gap: 20px;
+  }
+
+  .content_text-block_what {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+
+  .section-how {
+    gap: 20px;
+  }
+
+  .footer-title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    line-height: clamp(6.1875rem, 4.3668rem + 7.7684vw, 8.095625rem);
   }
 }
