--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,17 +3,21 @@
   и их переопределение под различные устройства
 */
 
-.page {
-  --cover-image: url(../images/cover-image-dark.png);
-  --accent-color: #ff0070;
-  --rec-color: #ff0070;
-  --border-color: rgb(255 0 112 / 0.4);
-  --active-button-color: #ff0070;
-  --button-text-color: #ff0070;
-  --decoration-color: #ff0070;
-  --title-color: #db00ff;
-  --section-title-color: #ff0070;
-  --text-color: #f1b2ce;
-  --accent-text-color: #000028;
+:root {
   --bg-color: #000028;
+  --bg-image: url(../images/cover-image-dark.png);
+  --color-title: #db00ff;
+  --accent-color: #ff0070;
+  --bg-color-text: #ff0070;
+  --color-subtitle-h2: #ff0070;
+  --color-subtitle-h3: #000028;
+  --color-text: #f1b2ce;
+  --font-family: "IBM Plex Mono";
+  --font-size-theme-menu-item: 18px;
+  --color-button-hover: rgb(255 0 112 / 0.4);
+  --font-weight-content-list: 400;
+  --font-weight-subtitle: 700;
+  --line-height: 23.4px;
+  --line-height-title: 95.7px;
+  --text-align: left;
 }
