--- a/styles/style.css
+++ b/styles/style.css
@@ -104,19 +104,19 @@ span {
 }
 
 .header__theme-menu {
-  grid-column: 1 / 5;
-  grid-row: 1 / 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
+  grid-column: 4 / 5;
+  grid-row: span 1 / 2;
+  align-content: end;
+  justify-items: end;
 }
 
 .header__theme-menu-list {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   gap: 10px;
-  margin: 0;
+  margin-top: 39px;
+  margin-right: 10px;
+  margin-bottom: 3px;
 }
 
 .header__theme-menu-button {
@@ -238,7 +238,7 @@ span {
   align-self: center;
 }
 
-@media (width >=768px) {
+@media (width >= 768px) {
   .header {
     max-block-size: 1024px;
   }
@@ -400,7 +400,7 @@ span {
   }
 }
 
-@media (width >=1024px) and (orientation: landscape) {
+@media (width >= 1024px) and (orientation: landscape) {
   .header__theme-menu {
     grid-column: 2 / 4;
     grid-row: 1 / 2;
