--- a/styles/light.css
+++ b/styles/light.css
@@ -3,7 +3,7 @@
   --bg-image: url(../images/cover-image-light.png);
   --color-title: #ffc2e6;
   --accent-color: #353430;
-  --bg-color-text: #ff0070;
+  --bg-color-text: #ff8dcb;
   --color-subtitle-h2: #353430;
   --color-subtitle-h3: #353430;
   --color-text: #353430;
