--- a/styles/style.css
+++ b/styles/style.css
@@ -176,7 +176,7 @@ span {
 }
 
 .text-link:focus-visible {
-  outline: 1px solid var(--accent-color);
+  outline: 1px solid var(--color-text);
 }
 
 .content_text-block {
